Updating conf for hive-4.1.0